# trajectoryTransformer

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: __init__.py  model.py
models/layers/: __init__.py  attention.py  feedforward.py  positional.py
models/tests/: test_layers.py  test_model.py
trajectoryTransformer/: __init__.py  dataset.py  features.py  plots.py
trajectoryTransformer/modeling/: predict.py  train.py
