[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "trajectoryTransformer"
version = "0.0.1"
description = "A transformer for autogressive prediction of trajectory"
authors = [
  { name = "Rupak Bose" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["trajectoryTransformer"]
include = ["pyproject.toml", "trajectoryTransformer/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["trajectoryTransformer"]
force-sort-within-sections = true

